<resources>
    <string name="app_name">Ramen Nagi</string>
    <string name="mainActivityTitle">KIOSK SETUP</string>

    <string name="cashier">Cashier Setup</string>
    <string name="customer">Customer Setup</string>
    <string name="Chef">Chef Setup</string>

    <string name="title_activity_customer_view">customer_view</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Cart</string>

    <string name="prompt">Enter admin code:</string>
    <string name="fail">Incorrect admin code. Please try again.</string>

    <string name="prompt1">Enter quantity of this item to be ordered:</string>
    <string name="invalid">Invalid input. Please try again.</string>

    <string name="ok">Submit</string>
    <string name="ok2">OK</string>

    <string name="check">View Order</string>
    <string name="check2">View Item</string>
    <string name="addButton">Add to Cart</string>

    <string name="cashMSG">Enter Order Confirmation ID:</string>
    <string name="defaultDesc">No Description Available</string>
    <string name="Back">Back</string>

    <string name="orderTitle">ORDER QUEUE</string>
    <string name="OrderD">ORDER DETAILS</string>
    <string name="mark">Mark as Complete</string>
    <string name="cart">Cart</string>
    <string name="print">Print Receipt and Confirmation Number</string>
    <string name="remove">Remove</string>

    <string name="menu1">DISHES</string>
    <string name="menu2">SIDES</string>
    <string name="menu3">DRINKS</string>
    <string name="cart1">CART</string>

    <string-array name="menu_items">
        <item>Original King (Butao)</item>
        <item>Black King (Kuroo)</item>
        <item>Red King (Akao)</item>
        <item>Green King (Midorio)</item>
        <item>Gyoza</item>
        <item>Sui-Gyoza</item>
        <item>Aurora Shrimp</item>
        <item>Nagi Vanilla Ice Cream</item>
        <item>Sesame Q</item>
        <item>Nagi Star Salad</item>
        <item>Fried Shrimp with Tartar Sauce</item>
        <item>Pork Katsu Roll</item>
        <item>Chashu Rice</item>
        <item>Chicken Karaage</item>
        <item>Curry Spring Rolls</item>
        <item>Nagi Chips</item>
    </string-array>

    <string-array name="menu_items2">
        <item>Kaedama</item>
        <item>Nori</item>
        <item>Chashu</item>
        <item>Tamago</item>
        <item>Kikurage</item>
        <item>Kakuni</item>
        <item>Negi</item>
        <item>Kyabetsu</item>
        <item>Japanese Rice</item>
    </string-array>

    <string-array name="menu_items3">
        <item>Homemade Iced Tea</item>
        <item>Mango Juice</item>
        <item>Orange Juice</item>
        <item>Pineapple Juice</item>
        <item>Sprite</item>
        <item>Coke Regular</item>
        <item>Coke Zero</item>
        <item>Royal</item>
        <item>Mineral Water</item>
        <item>San Mig Light</item>
        <item>Asahi</item>
        <item>Sapporo</item>
        <item>Kirin</item>
    </string-array>

    <string-array name="menu_descriptions">
        <item>Award-winning tonkotsu pork-broth prepared in the traditional method. Mouth-wateringly rich, fresh and aromatic; special handcrafted noodles and classic Nagi pork chashu.</item>
        <item>Fragrant blackened garlic and squid in a silky broth with succulent chashu; finished with a ball of minced pork, black sesame and Nagi spices.</item>
        <item>A striking blend of garlic, chilli oil and cayenne pepper in a velvety broth; topped by a tempting ball of miso-infused minced pork and special Nagi spices with tender chashu.</item>
        <item>A fusion of fresh basil and olive oil with delectable tonkotsu broth in a truly unique combination; lavishly garnished with grated parmesan cheese and richly marbled chashu.</item>
        <item>Meat and vegetables seasoned with Japanese spices, wrapped in Nagi’s special dough and finished with a crispy lattice skirt.</item>
        <item>Nagi\'s gyoza served in a sizzling stone bowl with our signature tonkotsu broth.</item>
        <item>Deep fried prawns with crispy noodles topped with aurora sauce.</item>
        <item>Nagi\'s vanilla ice cream served with 2 kinds of liquor.</item>
        <item>Thinly sliced cucumber seasoned with Nagi\'s special spices.</item>
        <item>Freshly sliced cabbage and lettuce with fried crispy noodles generously topped with Nagi\'s special dressing and slices of cherry tomatoes.</item>
        <item>Deep fried prawns served with tartar sauce.</item>
        <item>Thinly sliced pork belly rolled with cheese and served with Nagi\'s original sauce.</item>
        <item>Japanese rice cooked in special sauce topped with roasted pork and served with a delightful blend of soy sauce and mayo.</item>
        <item>Japanese fried chicken perfectly marinated in special sauce. Deep fried in special breading and served with a dip of mayo mustard.</item>
        <item>A mixture of ground pork, vegetables, vermicelli and curry wrapped in rice paper then deep fried until golden brown.</item>
        <item>Made of our special dough, fried to perfection and flavored in special Japanese seasoning.</item>
    </string-array>

    <string-array name="menu_descriptions2">
        <item>In the region of Kyushu, it is common for people to enjoy another serving of noodles.</item>
        <item>Seaweed.</item>
        <item>Classic Nagi pork chashu.</item>
        <item>Flavored egg - one of Nagi\'s classic trademarks.</item>
        <item>Japanese wood ear mushrooms.</item>
        <item>Japanese braised pork belly.</item>
        <item>Japanese savory green onions.</item>
        <item>Japanese pickled cabbage.</item>
        <item>Japanese rice, served Nagi-style.</item>
    </string-array>

    <string-array name="menu_descriptions3">
        <item>Our homemade Nagi iced tea served ice cold.</item>
        <item>Freshly-squeezed juice served ice cold.</item>
        <item>Freshly-squeezed juice served ice cold.</item>
        <item>Freshly-squeezed juice served ice cold.</item>
        <item>Soda served ice cold.</item>
        <item>Soda served ice cold.</item>
        <item>Soda served ice cold.</item>
        <item>Soda served ice cold.</item>
        <item>Bottled water served ice cold.</item>
        <item>Beer served ice cold.</item>
        <item>Authentic Japanese beer served ice cold.</item>
        <item>Authentic Japanese beer served ice cold.</item>
        <item>Authentic Japanese beer served ice cold.</item>
    </string-array>

    <string-array name="menu_prices">
        <item>390</item>
        <item>410</item>
        <item>410</item>
        <item>410</item>
        <item>220</item>
        <item>200</item>
        <item>370</item>
        <item>150</item>
        <item>160</item>
        <item>280</item>
        <item>370</item>
        <item>295</item>
        <item>190</item>
        <item>250</item>
        <item>170</item>
        <item>85</item>
    </string-array>

    <string-array name="menu_prices2">
        <item>70</item>
        <item>60</item>
        <item>120</item>
        <item>60</item>
        <item>50</item>
        <item>120</item>
        <item>60</item>
        <item>40</item>
        <item>60</item>
    </string-array>

    <string-array name="menu_prices3">
        <item>95</item>
        <item>80</item>
        <item>80</item>
        <item>80</item>
        <item>70</item>
        <item>70</item>
        <item>70</item>
        <item>70</item>
        <item>50</item>
        <item>85</item>
        <item>145</item>
        <item>150</item>
        <item>150</item>
    </string-array>

</resources>
